# leaglease

./: .gitignore  README.md  main2.py  pyproject.toml  requirements.txt
frontend/: dashboard.html  index.html  script.js  styles.css
src/: anonymization.py  clause_splitter.py  data_loader.py  vectorstore.py
src/faiss_store/: faiss.index  metadata.pkl
